--- a/src/components/Editor.module.scss
+++ b/src/components/Editor.module.scss
@@ -7,7 +7,7 @@
   position: absolute;
   left: 0.5em;
   bottom: 0.5em;
-  z-index: 1000;
+  z-index: 1;
   opacity: 0.7;
 }
 
